# saex

./: .gitignore  LICENSE.md  README.md  distest.py  pyproject.toml  restats  run.sh  scratch.ipynb  scratch.py  scratch_utils.ipynb  train_gemmas.py  train_gemmas2.py  train_phi_sae.py  train_phis.py
notebooks/: feature_vis.ipynb  scratch.ipynb
saex/: buffer.py  feature_vis.py  geometric_median.py  haver.py  iterable_dataset.py  model_haver.py  optim.py  patching.py  sae.py  toy_model_runner.py  toy_models.py  train_script.py  trainer_cache.py  transformers_model.py  utils.py
saex/models/: micrlhf_model.py  transformers_model.py
saex/scratch/: gen.py  toy_model_runner.py  toy_models.py
saex/utils/: __init__.py  patching.py
scripts/: cache_features.py  download_jb_saes.sh  feature_visualizer.py  train_gated_sae.py  train_gemma2_sae.py  train_gemma_sae.py  train_gpt2_sae.py  train_phi_sae.py
tests/: test_installation.py
