[tool.poetry]
name = "saex"
version = "0.0.1"
description = "SAEs in Jax"
authors = ["nev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
jax = {version = "^0.4.26", extras = ["tpu"]}
einops = "^0.7.0"
wandb = "^0.16.6"
matplotlib = "^3.8.4"
tqdm = "^4.66.2"
jaxtyping = "^0.2.28"
optax = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^4.0"

[[tool.poetry.source]]
name = "google-libtpu"
url = "https://storage.googleapis.com/jax-releases/libtpu_releases.html"
priority = "supplemental"

[tool.flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
